Adding elements with <template></template>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Element</title>
+    <style>
+        h2{
+            color: aquamarine;
+        }
+    </style>
 </head>
 <body>
-    <script type="module"src="./index.js"></script> 
+    <h2>Hello I'm a h2</h2>
+    <template>
+        <h2>Hello little avocado</h2>
+        <div>
+            <p>This is just the beginning...</p>
+        </div>
+    </template>
+    <script type="module"src="./template.js"></script> 
     <happy-hacking></happy-hacking>
 </body>
 </html>
