add multiple slots to one component

--- a/Slot/index.html
+++ b/Slot/index.html
@@ -10,7 +10,8 @@
     <h2>Hello I'm a h2</h2>
     <script type="module"src="./slot.js"></script> 
     <happy-hacking>
-        Let's be hackers
+        <span slot ="title">Let's be hackers</span>
+        <span slot ="parragraph">Your story starts here!</span>    
     </happy-hacking>
 </body>
 </html>
