added attributeChangedCallback and disconnectedCallback

--- a/attributeChangedCallback/index.html
+++ b/attributeChangedCallback/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Hello I'm a h2</h2>
-    <script type="module"src="./slot.js"></script> 
+    <script type="module"src="./changedcallback.js"></script> 
     <happy-hacking title="Happy Hacking!" parrafo ="This is a p example" img ="https://github.githubassets.com/images/modules/logos_page/Octocat.png" width = "100"></happy-hacking>
 </body>
 </html>
